# Rust-k

./: .gitignore  GEMINI.md  README.md  TODO-phase2.md  TODO-phase3.md  TODO-phase4.md  TODO-phase9.md  TODO-rust-core.md  TODO-rust-proxy.md  config_diff.txt  create_hybrid_dist.sh  diag.sh  flatten_plugins.sh  ge.txt  implementer-task1.prompt.md  plan.md  recv_diff.txt  restore_plugins.sh  root_diff.txt  start_bot.sh  test_bridge.pl  test_phase4.pl  test_raw_ro.pl  test_warp.pl  verify_connection.pl
control/: config.txt  mon_control.txt
control_hybrid_backup/: config.txt  eventMacros.txt  sys.txt  test_config.txt
graphify-out/: .graphify_python  .graphify_root  .graphify_semantic_1.json  .graphify_semantic_2.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  chunks.json  cost.json  generated_labels.json  graph.html  manifest.json
obsidian_vault/: Project_Index.md
obsidian_vault/notes/: HybridCore_Implementation.md  RustCore_Overview.md  RustCore_PostMortem.md
plugins/: New Text Document.txt  monkCombo.pl  webStatus.pl
src/: AI.pm  Commands.pm  FileParsers.pm  Misc.pm  functions.pl
src/AI/: Attack.pm  CoreLogic.pm
src/Network/: Receive.pm  XKoreProxy.pm
src/RustCore/: Cargo.toml
src/RustCore/src/: ipc.rs  main.rs
src/RustCore/src/map/: cache.rs  mod.rs  pathfinder.rs  reader.rs
src/RustCore/src/network/: miner.rs
src/RustCore/src/world/: actor.rs  targeting.rs
src/Utils/: PathFinding.pm
src_hybrid_backup/: Field.pm  Globals.pm  functions.pl
tables/: item_weights.txt  portals.txt  recvpackets.txt  servers.txt
(+55 files in other folders)
