[package]
name = "kore-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
anyhow = "1.0"
flate2 = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "packet-analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "kore-console"
path = "src/bin/console.rs"
